--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "3.12.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@types/react-helmet-async": "^1.0.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
     "framer-motion": "^12.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.3.0",
     "uuid": "^11.1.0"
