--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "react-icons": "^5.5.0"
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@vitejs/plugin-react": "^4.3.4",
+    "firebase": "^11.4.0",
+    "react-icons": "^5.5.0",
+    "vite": "^6.2.1"
   }
 }
