fixed ai response formatting

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "uuid": "^11.1.0"
   },
